--- a/beacon-chain/verification/BUILD.bazel
+++ b/beacon-chain/verification/BUILD.bazel
@@ -58,6 +58,7 @@ go_test(
         "batch_test.go",
         "blob_test.go",
         "cache_test.go",
+        "execution_payload_envelope_test.go",
         "initializer_test.go",
         "payload_attestation_test.go",
         "result_test.go",
@@ -78,6 +79,7 @@ go_test(
         "//consensus-types/primitives:go_default_library",
         "//crypto/bls:go_default_library",
         "//encoding/bytesutil:go_default_library",
+        "//proto/engine/v1:go_default_library",
         "//proto/prysm/v1alpha1:go_default_library",
         "//runtime/interop:go_default_library",
         "//testing/require:go_default_library",
