Add ePBS to db (#13971)
* Add ePBS to db

--- a/proto/prysm/v1alpha1/BUILD.bazel
+++ b/proto/prysm/v1alpha1/BUILD.bazel
@@ -181,10 +181,15 @@ ssz_fulu_objs = [
 
 ssz_epbs_objs = [
 	"BeaconBlockEpbs",
+	"BeaconStateEPBS",
 	"SignedBeaconBlockEpbs",
 	"PayloadAttestationData",
 	"PayloadAttestation",
 	"PayloadAttestationMessage",
+	"BuilderBid",
+	"DepositSnapshot",
+	"SignedBlindPayloadEnvelope",
+	"BlindPayloadEnvelope",
 ]
 
 ssz_gen_marshal(
@@ -308,8 +313,6 @@ ssz_gen_marshal(
         "MetaDataV2",
         "SignedValidatorRegistrationV1",
         "ValidatorRegistrationV1",
-        "BuilderBid",
-        "DepositSnapshot",
     ],
 )
 
@@ -399,6 +402,7 @@ ssz_proto_files(
         "light_client.proto",
         "data_columns.proto",
         "payload_attestation.proto",
+        "blind_payload_envelope.proto",
         "sync_committee.proto",
         "withdrawals.proto",
     ],
