Add ePBS stuff to consensus-types: block

--- a/proto/prysm/v1alpha1/BUILD.bazel
+++ b/proto/prysm/v1alpha1/BUILD.bazel
@@ -180,8 +180,8 @@ ssz_fulu_objs = [
 ]
 
 ssz_epbs_objs = [
-	"BeaconBlockePBS",
-	"SignedBeaconBlockePBS",
+	"BeaconBlockEpbs",
+	"SignedBeaconBlockEpbs",
 	"PayloadAttestationData",
 	"PayloadAttestation",
 	"PayloadAttestationMessage",
