Helper for Payload Attestation Signing (#13901)

--- a/proto/prysm/v1alpha1/BUILD.bazel
+++ b/proto/prysm/v1alpha1/BUILD.bazel
@@ -182,6 +182,9 @@ ssz_fulu_objs = [
 ssz_epbs_objs = [
 	"BeaconBlockePBS",
 	"SignedBeaconBlockePBS",
+	"PayloadAttestationData",
+	"PayloadAttestation",
+	"PayloadAttestationMessage",
 ]
 
 ssz_gen_marshal(
@@ -284,7 +287,7 @@ ssz_gen_marshal(
         "//math:go_default_library",
     ],
     objs = ssz_epbs_objs,
-    exclude_objs = ssz_phase0_objs + ssz_altair_objs + ssz_bellatrix_objs  + ssz_capella_objs + ssz_deneb_objs + ssz_epbs_objs,
+    exclude_objs = ssz_phase0_objs + ssz_altair_objs + ssz_bellatrix_objs  + ssz_capella_objs + ssz_deneb_objs + ssz_electra_objs,
 )
 
 ssz_gen_marshal(
@@ -395,6 +398,7 @@ ssz_proto_files(
         "blobs.proto",
         "light_client.proto",
         "data_columns.proto",
+        "payload_attestation.proto",
         "sync_committee.proto",
         "withdrawals.proto",
     ],
