--- a/proto/prysm/v1alpha1/BUILD.bazel
+++ b/proto/prysm/v1alpha1/BUILD.bazel
@@ -26,6 +26,7 @@ proto_library(
         "powchain.proto",
         "slasher.proto",
         "validator.proto",
+        "focil.proto",
         ":ssz_proto_files",
     ],
     visibility = ["//visibility:public"],
@@ -178,6 +179,8 @@ ssz_electra_objs = [
 ssz_fulu_objs = [
     "DataColumnIdentifier",
     "DataColumnSidecar",
+    "InclusionList",
+    "SignedInclusionList",
 ]
 
 ssz_gen_marshal(
