--- a/beacon-chain/operations/attestations/attmap/BUILD.bazel
+++ b/beacon-chain/operations/attestations/attmap/BUILD.bazel
@@ -2,8 +2,8 @@ load("@prysm//tools/go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["forkchoice.go"],
-    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/operations/attestations/forkchoice",
+    srcs = ["map.go"],
+    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/operations/attestations/attmap",
     visibility = ["//visibility:public"],
     deps = [
         "//proto/prysm/v1alpha1:go_default_library",
